--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,13 @@
 ---
 import BaseLayout from "~layouts/BaseLayout.astro"
-import Profile from "./index/profile.astro"
-import Education from "./index/education.astro"
-import Work from "./index/work.astro"
+import Profile from "./index/Profile.astro"
+import Education from "./index/Education.astro"
+import Work from "./index/Work.astro"
 import Project from "./index/Project.astro"
 import type { IEducation } from "~types/education"
 import type { IWork } from "~types/work"
 import type { IProject } from "~types/project"
-import { mostRecentYearComparator } from "~utils/comparator"
+import { mostRecentYearComparator } from "~utils/comparators"
 import AppLink from "~components/AppLink.astro"
 import { Repository } from "~types/repository"
 
