--- a/src/components/AppFooter.astro
+++ b/src/components/AppFooter.astro
@@ -8,7 +8,7 @@ import AppLink from "./AppLink.astro"
     <div>
       <span>Released under</span>
       <span class="inline-flex">
-        <AppLink href="https://opensource.org/license/mit" showSuffixIcon title="The MIT License">
+        <AppLink url="https://opensource.org/license/mit" showSuffixIcon title="The MIT License">
           The MIT license
         </AppLink>
         .
@@ -17,7 +17,7 @@ import AppLink from "./AppLink.astro"
     <div>
       <span>Credits to:</span>
       <span class="inline-flex">
-        <AppLink href="https://brittanychiang.com" showSuffixIcon title="Brittany Chiang's Portfolio">
+        <AppLink url="https://brittanychiang.com" showSuffixIcon title="Brittany Chiang's Portfolio">
           Brittany Chiang
         </AppLink>
         .
