update project descriptions

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -5,7 +5,7 @@ import AppFooter from "~components/AppFooter.astro"
 import "~styles/index.css"
 
 const title: string = "Astro Theme Resume Minimalist — Jianqiang Du"
-const description: string = "A minimal astro resume site template."
+const description: string = "An open-sourced minimal resume site template built with Astro."
 ---
 
 <html lang="en">
