hide hamburger button; replace <a> with <AppLink>; update padding

--- a/src/components/AppHeader.astro
+++ b/src/components/AppHeader.astro
@@ -1,9 +1,13 @@
+---
+import AppLink from "./AppLink.astro"
+---
+
 <header class="flex justify-between">
   <!-- home nav -->
-  <a class="px-4 text-lg leading-14 lowercase" href={import.meta.env.BASE_URL}>resume</a>
+  <AppLink class="px-6 text-lg leading-14 lowercase" url={import.meta.env.BASE_URL}>resume</AppLink>
 
   <!-- hamburger -->
-  <button class="h-14 w-14 flex items-center justify-center p-4">
+  <!-- <button class="h-14 w-14 flex items-center justify-center p-4">
     <i class="text-2xl" class:list={["i-material-symbols:menu-rounded"]}></i>
-  </button>
+  </button> -->
 </header>
