update social links

--- a/src/pages/index/Profile.astro
+++ b/src/pages/index/Profile.astro
@@ -7,9 +7,9 @@ const socials: ISocial[] = [
   { name: "Email", iconClassName: "i-ri:mail-line", url: "mailto:jackdu2013@163.com" }, // Email
   { name: "Portfolio", iconClassName: "i-ri:earth-line", url: "https://yurikong.github.io" }, // Portfolio
   { name: "Github", iconClassName: "i-ri:github-line", url: "https://github.com/yurikong" }, // Github
-  { name: "LinkedIn", iconClassName: "i-ri:linkedin-box-line" }, // LinkedIn
-  { name: "Instagram", iconClassName: "i-ri:instagram-line" }, // Instagram
-  { name: "Twitter X", iconClassName: "i-ri:twitter-x-line" }, // Twitter X
+  { name: "LinkedIn", iconClassName: "i-ri:linkedin-box-line", url: "https://www.linkedin.com/in/jianqiang-du/" }, // LinkedIn
+  { name: "Instagram", iconClassName: "i-ri:instagram-line", url: "https://www.instagram.com/jackduu/" }, // Instagram
+  { name: "Twitter X", iconClassName: "i-ri:twitter-x-line", url: "https://x.com/yurikong2017" }, // Twitter X
 ]
 ---
 
