--- a/src/pages/index/Profile.astro
+++ b/src/pages/index/Profile.astro
@@ -15,18 +15,17 @@ const socials: ISocial[] = [
 
 <div>
   <!-- Name -->
-  <h1 class="text-4xl font-semibold tracking-tight capitalize">
-    <AppLink url="https://yurikong.github.io" title="Portfolio">jianqiang du</AppLink>
-  </h1>
+  <h1 class="text-(4xl gray-800) font-medium tracking-tight capitalize">jianqiang du</h1>
 
   <!-- Job Title -->
-  <div class="mt-4 text-lg font-medium tracking-tight capitalize">Software Developer</div>
+  <div class="mt-4 text-(lg gray-800) font-medium tracking-tight capitalize">Software Developer</div>
 
   <!-- Description -->
   <p class="mt-6 text-base">
     <span class="inline-block">I am the creator of</span>
     <span class="inline-flex">
       <AppLink
+        class="text-gray-800"
         url="https://github.com/yurikong/astro-theme-resume-minimalist"
         showSuffixIcon
         title="Project Repository"
