--- a/src/pages/index/Profile.astro
+++ b/src/pages/index/Profile.astro
@@ -37,7 +37,7 @@ const socials: ISocial[] = [
   </p>
 
   <!-- Social Contacts -->
-  <ul class="mt-8 flex items-center gap-5 text-2xl leading-none">
+  <ul class="mt-8 flex flex-wrap items-center gap-5 text-2xl leading-none">
     {
       socials.map((it) => (
         <li>
