change AppFooter padding

--- a/src/components/AppFooter.astro
+++ b/src/components/AppFooter.astro
@@ -2,11 +2,15 @@
 import AppLink from "./AppLink.astro"
 ---
 
-<footer class="px-6 pb-6 pt-24 text-(center xs) leading-relaxed">
+<footer class="px-6 pb-12 pt-48 text-(center xs) leading-relaxed">
   <p>
     <!-- Author -->
     <div>
-      <span>Made with <span class="text-red-500">❤️</span> by</span>
+      <span>
+        Made with
+        <span class="text-red-500">❤️</span>
+        by
+      </span>
       <span class="inline-flex">
         <AppLink
           class="text-gray-800 capitalize"
@@ -25,7 +29,7 @@ import AppLink from "./AppLink.astro"
       <span>Released under</span>
       <span class="inline-flex">
         <AppLink class="text-gray-800" url="https://opensource.org/license/mit" showSuffixIcon title="The MIT License">
-          The MIT license
+          The MIT License
         </AppLink>
         .
       </span>
