remove wrapping div for AppLink

--- a/src/components/AppHeader.astro
+++ b/src/components/AppHeader.astro
@@ -4,9 +4,9 @@ import AppLink from "./AppLink.astro"
 
 <header class="flex justify-between">
   <!-- home nav -->
-  <AppLink class="px-6 text-(lg gray-800) font-medium leading-14 lowercase" url={import.meta.env.BASE_URL}
-    >resume</AppLink
-  >
+  <AppLink class="px-6 text-(lg gray-800) font-medium leading-14 lowercase" url={import.meta.env.BASE_URL}>
+    resume
+  </AppLink>
 
   <!-- hamburger -->
   <!-- <button class="h-14 w-14 flex items-center justify-center p-4">
