--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -131,7 +131,7 @@ projectList.sort(mostRecentYearComparator)
     </ul>
 
     <!-- View Full Resume -->
-    <div class="mt-16">
+    <div class="mt-24">
       <AppLink class="text-gray-800 font-semibold capitalize" showSuffixIcon title="Resume">view full resume</AppLink>
     </div>
   </section>
@@ -150,9 +150,10 @@ projectList.sort(mostRecentYearComparator)
     </ul>
 
     <!-- View All Projects -->
-    <div class="mt-16">
-      <AppLink class="text-gray-800 font-semibold capitalize" showSuffixIcon title="Projects">view all projects</AppLink
-      >
+    <div class="mt-24">
+      <AppLink class="text-gray-800 font-semibold capitalize" showSuffixIcon title="Projects">
+        view all projects
+      </AppLink>
     </div>
   </section>
 </BaseLayout>
