--- a/src/pages/index/Profile.astro
+++ b/src/pages/index/Profile.astro
@@ -22,7 +22,7 @@ const socials: ISocial[] = [
 
   <!-- Description -->
   <p class="mt-6 text-base">
-    <span class="inline-block">I am the creator of</span>
+    <span>I am the creator of</span>
     <span class="inline-flex">
       <AppLink
         class="text-gray-800"
