--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -105,7 +105,11 @@ projectList.sort(mostRecentYearComparator)
 
   <!-- Education -->
   <section class="mt-36">
-    <h2 class="mb-4 py-5 text-(sm gray-800) font-semibold tracking-widest uppercase">education</h2>
+    <h2
+      class="sticky top-0 z-20 mb-4 w-vw bg-gray-100 px-6 py-5 text-(sm gray-800) font-semibold tracking-widest uppercase -mx-6"
+    >
+      education
+    </h2>
     <ul>
       {
         educationList.map((it) => (
@@ -119,7 +123,11 @@ projectList.sort(mostRecentYearComparator)
 
   <!-- Work -->
   <section class="mt-36">
-    <h2 class="mb-4 py-5 text-(sm gray-800) font-semibold tracking-widest uppercase">work</h2>
+    <h2
+      class="sticky top-0 z-20 mb-4 w-vw bg-gray-100 px-6 py-5 text-(sm gray-800) font-semibold tracking-widest uppercase -mx-6"
+    >
+      work
+    </h2>
     <ul>
       {
         workList.map((it) => (
@@ -138,7 +146,11 @@ projectList.sort(mostRecentYearComparator)
 
   <!-- Projects -->
   <section class="mt-36">
-    <h2 class="mb-4 py-5 text-(sm gray-800) font-semibold tracking-widest uppercase">projects</h2>
+    <h2
+      class="sticky top-0 z-20 mb-4 w-vw bg-gray-100 px-6 py-5 text-(sm gray-800) font-semibold tracking-widest uppercase -mx-6"
+    >
+      projects
+    </h2>
     <ul>
       {
         projectList.map((it) => (
