--- a/src/components/AppHeader.astro
+++ b/src/components/AppHeader.astro
@@ -1,8 +1,13 @@
 ---
 import AppLink from "./AppLink.astro"
+
+interface Props {
+  class?: string
+}
+const { class: className } = Astro.props
 ---
 
-<header class="flex justify-between">
+<header class="flex justify-between" class:list={[className]}>
   <!-- home nav -->
   <AppLink class="px-6 text-(lg gray-800) font-medium leading-14 lowercase" url={import.meta.env.BASE_URL}>
     resume
