move <main> into index page, move padding & margins to extra div wrapper in BaseLayout

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -17,9 +17,9 @@ const description: string = "An open-sourced minimal resume site template built 
   <Inter />
 
   <body class="relative bg-gray-100 text-gray-500">
-    <main class="px-6 py-12">
+    <div class="px-6 py-16">
       <slot />
-    </main>
+    </div>
 
     <AppFooter />
   </body>
