--- a/src/pages/index/Profile.astro
+++ b/src/pages/index/Profile.astro
@@ -13,7 +13,7 @@ const socials: ISocial[] = [
 ]
 ---
 
-<div>
+<section>
   <!-- Name -->
   <h1 class="text-(4xl gray-800) font-medium tracking-tight capitalize">jianqiang du</h1>
 
@@ -46,4 +46,4 @@ const socials: ISocial[] = [
       ))
     }
   </ul>
-</div>
+</section>
