--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,33 +4,11 @@ import Profile from "./index/Profile.astro"
 import Education from "./index/Education.astro"
 import Work from "./index/Work.astro"
 import Project from "./index/Project.astro"
-import type { IEducation } from "~types/education"
 import type { IWork } from "~types/work"
 import type { IProject } from "~types/project"
 import { mostRecentYearComparator } from "~utils/comparators"
 import AppLink from "~components/AppLink.astro"
 import { Repository } from "~types/repository"
-
-const educationList: IEducation[] = [
-  {
-    university: "California State University, Long Beach",
-    universityHomepage: "https://www.csulb.edu/",
-    degree: "B.S.",
-    major: "Computer Science",
-    GPA: "3.65",
-    startYear: 2018,
-    endYear: 2020,
-  },
-  {
-    university: "Mt. San Antonio College",
-    universityHomepage: "https://www.mtsac.edu/",
-    major: "Computer Science",
-    GPA: "3.48",
-    startYear: 2015,
-    endYear: 2018,
-  },
-]
-educationList.sort(mostRecentYearComparator)
 
 const workList: IWork[] = [
   {
@@ -100,24 +78,7 @@ projectList.sort(mostRecentYearComparator)
 <BaseLayout>
   <main>
     <Profile />
-
-    <!-- Education -->
-    <section class="mt-36">
-      <h2
-        class="sticky top-0 z-20 mb-4 w-vw bg-gray-100 px-6 py-5 text-(sm gray-800) font-semibold tracking-widest uppercase -mx-6"
-      >
-        education
-      </h2>
-      <ul>
-        {
-          educationList.map((it) => (
-            <li class="mb-16 last-of-type:mb-0">
-              <Education {...it} />
-            </li>
-          ))
-        }
-      </ul>
-    </section>
+    <Education class="mt-36" />
 
     <!-- Work -->
     <section class="mt-36">
